--- a/backend/package.json
+++ b/backend/package.json
@@ -5,16 +5,17 @@
   "main": "app.js",
   "scripts": {
     "test": "jest --runInBand",
-    "start": "nodemon app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "dependencies": {
+  "dependencies": { 
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1",
+    "express": "^5.2.1", 
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "nodemon": "^3.1.11"
